--- a/BioBaseCLIA/ScalingQC/frmScaling.en.resx
+++ b/BioBaseCLIA/ScalingQC/frmScaling.en.resx
@@ -325,6 +325,27 @@
   <data name="fbtnQCQuery.Text" xml:space="preserve">
     <value>QC</value>
   </data>
+  <data name="colItemName.HeaderText" xml:space="preserve">
+    <value>Project Name</value>
+  </data>
+  <data name="colRegentBatch.HeaderText" xml:space="preserve">
+    <value>Batch Number</value>
+  </data>
+  <data name="colISMainCurve.HeaderText" xml:space="preserve">
+    <value>Main Curve(Y/N) </value>
+  </data>
+  <data name="colIsScal.HeaderText" xml:space="preserve">
+    <value>Calibration(Y/N) </value>
+  </data>
+  <data name="colCalType.HeaderText" xml:space="preserve">
+    <value>Mode</value>
+  </data>
+  <data name="colActiveDate.HeaderText" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="ExpiryDate.HeaderText" xml:space="preserve">
+    <value>Exp.Date</value>
+  </data>
   <data name="groupBox1.Text" xml:space="preserve">
     <value>According To Data
 
@@ -612,7 +633,7 @@
     <value>Add Main Curve</value>
   </data>
   <data name="colScalPoint.HeaderText" xml:space="preserve">
-    <value>Num</value>
+    <value>No.</value>
   </data>
   <data name="colConcentration.HeaderText" xml:space="preserve">
     <value>Concentration</value>
@@ -646,27 +667,6 @@
   </data>
   <data name="lblEquation.Text" xml:space="preserve">
     <value>Formula：</value>
-  </data>
-  <data name="colItemName.HeaderText" xml:space="preserve">
-    <value>Project Name</value>
-  </data>
-  <data name="colRegentBatch.HeaderText" xml:space="preserve">
-    <value>Batch Number</value>
-  </data>
-  <data name="colISMainCurve.HeaderText" xml:space="preserve">
-    <value>Main Curve(Y/N) </value>
-  </data>
-  <data name="colIsScal.HeaderText" xml:space="preserve">
-    <value>Calibration(Y/N) </value>
-  </data>
-  <data name="colCalType.HeaderText" xml:space="preserve">
-    <value>Mode</value>
-  </data>
-  <data name="colActiveDate.HeaderText" xml:space="preserve">
-    <value>Date</value>
-  </data>
-  <data name="ExpiryDate.HeaderText" xml:space="preserve">
-    <value>Exp.Date</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -840,35 +840,5 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAAgAEAALQF
         wf+0BQAAgAUAAIAFAACAAQAAgAHB/4ABAACAAQAAgAEAALwBAAC8AQAAvAHB/4ABbP///5H/
 </value>
-  </data>
-  <data name="keywordText.Calibration" xml:space="preserve">
-    <value>Calibration</value>
-  </data>
-  <data name="keywordText.CorrelationCoefficient" xml:space="preserve">
-    <value>Correlation Coefficient：</value>
-  </data>
-  <data name="keywordText.Equation" xml:space="preserve">
-    <value>Equation：</value>
-  </data>
-  <data name="keywordText.Error" xml:space="preserve">
-    <value>Error</value>
-  </data>
-  <data name="keywordText.Formula" xml:space="preserve">
-    <value>Formula：</value>
-  </data>
-  <data name="keywordText.FuncCalcError" xml:space="preserve">
-    <value>Function calculation error, maybe the data is not suitable for this regression model</value>
-  </data>
-  <data name="keywordText.NoInputCurve" xml:space="preserve">
-    <value>Calibration curve not entered!</value>
-  </data>
-  <data name="keywordText.RegressionCalcError" xml:space="preserve">
-    <value>Calculation error occurred in regression calculation, so the data may not be suitable for this regression model</value>
-  </data>
-  <data name="keywordText.SixPoint" xml:space="preserve">
-    <value>Six Point</value>
-  </data>
-  <data name="keywordText.TwoPoint" xml:space="preserve">
-    <value>Two Point</value>
   </data>
 </root>
