--- a/BioBaseCLIA/ScalingQC/frmScaling.resx
+++ b/BioBaseCLIA/ScalingQC/frmScaling.resx
@@ -384,14 +384,14 @@
   <data name="&gt;&gt;label6.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
+  <data name="fbtnQCQuery.Size" type="System.Drawing.Size, System.Drawing">
+    <value>130, 60</value>
+  </data>
   <data name="fbtnAddMainCurve.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Stretch</value>
   </data>
   <data name="fbtnReturn.Location" type="System.Drawing.Point, System.Drawing">
     <value>24, 423</value>
-  </data>
-  <data name="dgvScalData.Location" type="System.Drawing.Point, System.Drawing">
-    <value>150, 20</value>
   </data>
   <data name="&gt;&gt;fbtnReset.ZOrder" xml:space="preserve">
     <value>0</value>
@@ -438,6 +438,9 @@
   <data name="colValidDate.HeaderText" xml:space="preserve">
     <value>有效期</value>
   </data>
+  <data name="groupBox1.Text" xml:space="preserve">
+    <value>数据显示</value>
+  </data>
   <data name="colConcentration.HeaderText" xml:space="preserve">
     <value>浓度</value>
   </data>
@@ -465,6 +468,9 @@
   <data name="&gt;&gt;groupBox1.Name" xml:space="preserve">
     <value>groupBox1</value>
   </data>
+  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>835, 200</value>
+  </data>
   <data name="&gt;&gt;fbtnPrintCurve.Parent" xml:space="preserve">
     <value>groupBox1</value>
   </data>
@@ -477,8 +483,8 @@
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>844, 5</value>
   </data>
-  <data name="groupBox2.TabIndex" type="System.Int32, mscorlib">
-    <value>49</value>
+  <data name="keywordText.Calibration" xml:space="preserve">
+    <value>定标</value>
   </data>
   <data name="fbtnReset.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Stretch</value>
@@ -492,6 +498,9 @@
   <data name="fbtnAddMainCurve.Text" xml:space="preserve">
     <value>添加主曲线</value>
   </data>
+  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
+    <value>46</value>
+  </data>
   <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
@@ -501,14 +510,17 @@
   <data name="fbtnReset.Location" type="System.Drawing.Point, System.Drawing">
     <value>9, 64</value>
   </data>
+  <data name="keywordText.Error" xml:space="preserve">
+    <value>错误</value>
+  </data>
   <data name="dgvScalingData.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
   <data name="&gt;&gt;fbtnQCQuery.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="&gt;&gt;fbtnReturn.ZOrder" xml:space="preserve">
-    <value>1</value>
+  <data name="&gt;&gt;fbtnReset.Type" xml:space="preserve">
+    <value>BioBaseCLIA.CustomControl.FunctionButton, BioBaseCLIA, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="fbtnPrintCurve.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Stretch</value>
@@ -518,6 +530,9 @@
   </data>
   <data name="&gt;&gt;dgvScalingData.Type" xml:space="preserve">
     <value>System.Windows.Forms.DataGridView, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="dgvScalData.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
   </data>
   <data name="fbtnQCQuery.BackgroundImageLayout" type="System.Windows.Forms.ImageLayout, System.Windows.Forms">
     <value>Stretch</value>
@@ -606,14 +621,11 @@
   <data name="&gt;&gt;definePanal1.Type" xml:space="preserve">
     <value>BioBaseCLIA.CustomControl.definePanal, BioBaseCLIA, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
-  <data name="fbtnPrintCurve.TabIndex" type="System.Int32, mscorlib">
-    <value>48</value>
+  <data name="keywordText.SixPoint" xml:space="preserve">
+    <value>六点定标</value>
   </data>
   <data name="&gt;&gt;colItemName.Name" xml:space="preserve">
     <value>colItemName</value>
-  </data>
-  <data name="lblR.Size" type="System.Drawing.Size, System.Drawing">
-    <value>53, 12</value>
   </data>
   <data name="lblR.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -633,17 +645,23 @@
   <data name="&gt;&gt;fbtnReturn.Type" xml:space="preserve">
     <value>BioBaseCLIA.CustomControl.FunctionButton, BioBaseCLIA, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
+  <data name="keywordText.Equation" xml:space="preserve">
+    <value>方程式：</value>
+  </data>
   <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>835, 200</value>
+  <data name="fbtnSelectCurve.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 38</value>
   </data>
   <data name="fbtnReturn.Text" xml:space="preserve">
     <value>返回</value>
   </data>
   <data name="&gt;&gt;colRLU.Name" xml:space="preserve">
     <value>colRLU</value>
+  </data>
+  <data name="keywordText.FuncCalcError" xml:space="preserve">
+    <value>函数计算错误，可能该数据不适合此回归模型</value>
   </data>
   <data name="&gt;&gt;groupBox3.Type" xml:space="preserve">
     <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -714,9 +732,6 @@
   <data name="&gt;&gt;lblR.Name" xml:space="preserve">
     <value>lblR</value>
   </data>
-  <data name="&gt;&gt;label6.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="definePanal1.Size" type="System.Drawing.Size, System.Drawing">
     <value>551, 188</value>
   </data>
@@ -732,8 +747,8 @@
   <data name="chbShowMainCurve.Location" type="System.Drawing.Point, System.Drawing">
     <value>10, 21</value>
   </data>
-  <data name="fbtnReturn.TabIndex" type="System.Int32, mscorlib">
-    <value>21</value>
+  <data name="&gt;&gt;label6.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="fbtnSelectCurve.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -802,6 +817,9 @@
   <data name="&gt;&gt;groupBox2.Type" xml:space="preserve">
     <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="keywordText.RegressionCalcError" xml:space="preserve">
+    <value>回归计算时出现运算错误，可能该数据不适合此回归模型</value>
+  </data>
   <data name="&gt;&gt;colIsScal.Name" xml:space="preserve">
     <value>colIsScal</value>
   </data>
@@ -811,17 +829,14 @@
   <data name="&gt;&gt;colISMainCurve.Name" xml:space="preserve">
     <value>colISMainCurve</value>
   </data>
-  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
-    <value>46</value>
+  <data name="fbtnReturn.TabIndex" type="System.Int32, mscorlib">
+    <value>21</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>BioBaseCLIA.frmParent, BioBaseCLIA, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;dgvScalData.ZOrder" xml:space="preserve">
     <value>2</value>
-  </data>
-  <data name="lblEquation.Text" xml:space="preserve">
-    <value>公式：</value>
   </data>
   <data name="fbtnScalingQuery.Enabled" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -856,8 +871,8 @@
   <data name="fbtnScalingQuery.Location" type="System.Drawing.Point, System.Drawing">
     <value>24, 40</value>
   </data>
-  <data name="fbtnQCQuery.Size" type="System.Drawing.Size, System.Drawing">
-    <value>130, 60</value>
+  <data name="dgvScalData.Location" type="System.Drawing.Point, System.Drawing">
+    <value>150, 20</value>
   </data>
   <data name="fbtnPrintCurve.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -868,11 +883,14 @@
   <data name="groupBox3.TabIndex" type="System.Int32, mscorlib">
     <value>50</value>
   </data>
-  <data name="fbtnSelectCurve.Size" type="System.Drawing.Size, System.Drawing">
-    <value>120, 38</value>
+  <data name="&gt;&gt;colCalType.Name" xml:space="preserve">
+    <value>colCalType</value>
   </data>
   <data name="groupBox2.Location" type="System.Drawing.Point, System.Drawing">
     <value>6, 243</value>
+  </data>
+  <data name="&gt;&gt;fbtnReturn.ZOrder" xml:space="preserve">
+    <value>1</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>96, 96</value>
@@ -956,6 +974,12 @@
         /BszvVKvx5MPAzA7yGZlu5nptv2Pm/MHz+N45ZRT+BMAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="keywordText.NoInputCurve" xml:space="preserve">
+    <value>未输入定标曲线！</value>
+  </data>
+  <data name="&gt;&gt;fbtnAddMainCurve.Type" xml:space="preserve">
+    <value>BioBaseCLIA.CustomControl.FunctionButton, BioBaseCLIA, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
   <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
     <value>73, 29</value>
   </data>
@@ -965,8 +989,11 @@
   <data name="&gt;&gt;colActiveDate.Name" xml:space="preserve">
     <value>colActiveDate</value>
   </data>
-  <data name="&gt;&gt;fbtnAddMainCurve.Type" xml:space="preserve">
-    <value>BioBaseCLIA.CustomControl.FunctionButton, BioBaseCLIA, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  <data name="groupBox2.TabIndex" type="System.Int32, mscorlib">
+    <value>49</value>
+  </data>
+  <data name="$this.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
+    <value>GrowAndShrink</value>
   </data>
   <data name="fbtnAddMainCurve.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1135,8 +1162,8 @@
   <data name="&gt;&gt;fbtnReturn.Name" xml:space="preserve">
     <value>fbtnReturn</value>
   </data>
-  <data name="&gt;&gt;fbtnReset.Type" xml:space="preserve">
-    <value>BioBaseCLIA.CustomControl.FunctionButton, BioBaseCLIA, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  <data name="lblR.Size" type="System.Drawing.Size, System.Drawing">
+    <value>53, 12</value>
   </data>
   <data name="fbtnReset.TabIndex" type="System.Int32, mscorlib">
     <value>51</value>
@@ -1144,17 +1171,17 @@
   <data name="&gt;&gt;fbtnPrintCurve.Name" xml:space="preserve">
     <value>fbtnPrintCurve</value>
   </data>
-  <data name="dgvScalData.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
+  <data name="keywordText.Formula" xml:space="preserve">
+    <value>公式：</value>
   </data>
-  <data name="$this.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
-    <value>GrowAndShrink</value>
+  <data name="fbtnPrintCurve.TabIndex" type="System.Int32, mscorlib">
+    <value>48</value>
   </data>
   <data name="colActiveDate.HeaderText" xml:space="preserve">
     <value>定标日期</value>
   </data>
-  <data name="&gt;&gt;colCalType.Name" xml:space="preserve">
-    <value>colCalType</value>
+  <data name="lblEquation.Text" xml:space="preserve">
+    <value>公式：</value>
   </data>
   <data name="label6.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
     <value>TopCenter</value>
@@ -1180,8 +1207,11 @@
   <data name="&gt;&gt;fbtnScalingQuery.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <data name="&gt;&gt;fbtnSelectCurve.ZOrder" xml:space="preserve">
-    <value>1</value>
+  <data name="keywordText.CorrelationCoefficient" xml:space="preserve">
+    <value>相关系数：</value>
+  </data>
+  <data name="keywordText.TwoPoint" xml:space="preserve">
+    <value>两点校准</value>
   </data>
   <data name="groupBox2.Size" type="System.Drawing.Size, System.Drawing">
     <value>257, 292</value>
@@ -1192,8 +1222,8 @@
   <data name="fbtnAddMainCurve.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 38</value>
   </data>
-  <data name="groupBox1.Text" xml:space="preserve">
-    <value>数据显示</value>
+  <data name="&gt;&gt;fbtnSelectCurve.ZOrder" xml:space="preserve">
+    <value>1</value>
   </data>
   <data name="label6.TabIndex" type="System.Int32, mscorlib">
     <value>45</value>
@@ -1216,79 +1246,49 @@
   <data name="lblEquation.Size" type="System.Drawing.Size, System.Drawing">
     <value>41, 12</value>
   </data>
-  <data name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing">
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>137, 17</value>
-  </data>
-  <data name="ExpiryDate.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="ExpiryDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colRegentBatch.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colRegentBatch.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colCalType.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colCalType.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colItemName.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colItemName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colISMainCurve.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colISMainCurve.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colIsScal.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colIsScal.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colRLU.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colRLU.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colConcentration.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colConcentration.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colScalPoint.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colScalPoint.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib">
+  </metadata>
+  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>en</value>
-  </data>
-  <data name="$this.Localizable" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colValidDate.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colValidDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="colActiveDate.UserAddedColumn" type="System.Boolean, mscorlib">
+  </metadata>
+  <metadata name="colActiveDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="MenuCurve.TrayLocation" type="System.Drawing.Point, System.Drawing">
+  </metadata>
+  <metadata name="MenuCurve.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
-  </data>
-  <data name="keywordText.Calibration" xml:space="preserve">
-    <value>定标</value>
-  </data>
-  <data name="keywordText.CorrelationCoefficient" xml:space="preserve">
-    <value>相关系数：</value>
-  </data>
-  <data name="keywordText.Equation" xml:space="preserve">
-    <value>方程式：</value>
-  </data>
-  <data name="keywordText.Error" xml:space="preserve">
-    <value>错误</value>
-  </data>
-  <data name="keywordText.Formula" xml:space="preserve">
-    <value>公式：</value>
-  </data>
-  <data name="keywordText.FuncCalcError" xml:space="preserve">
-    <value>函数计算错误，可能该数据不适合此回归模型</value>
-  </data>
-  <data name="keywordText.NoInputCurve" xml:space="preserve">
-    <value>未输入定标曲线！</value>
-  </data>
-  <data name="keywordText.RegressionCalcError" xml:space="preserve">
-    <value>回归计算时出现运算错误，可能该数据不适合此回归模型</value>
-  </data>
-  <data name="keywordText.SixPoint" xml:space="preserve">
-    <value>六点定标</value>
-  </data>
-  <data name="keywordText.TwoPoint" xml:space="preserve">
-    <value>两点校准</value>
-  </data>
+  </metadata>
 </root>
